# vericrypt

./: Cargo.toml  README.md  VERICRYPT_ARC42.md  batch_0.sh  batch_01.sh  batch_02.sh  batch_03.sh  batch_04.sh  batch_05.sh  batch_06.sh
.build-manifests/: batch-0-manifest.json
crates/vericrypt/: Cargo.toml
crates/vericrypt/benches/: scan_benchmarks.rs
crates/vericrypt/src/: cli.rs  errors.rs  license.rs  main.rs  types.rs  verify_main.rs
crates/vericrypt/src/cbom/: mod.rs
crates/vericrypt/src/compliance/: mod.rs
crates/vericrypt/src/exposure/: mod.rs
crates/vericrypt/src/graph/: mod.rs
crates/vericrypt/src/ingest/: mod.rs
crates/vericrypt/src/prioritize/: mod.rs
crates/vericrypt/src/report/: mod.rs
crates/vericrypt/src/tee/: mod.rs
crates/vericrypt/tests/: integration_test.rs
